Fixed modal z-index for google recaptcha

--- a/server/public/assets/css/style.css
+++ b/server/public/assets/css/style.css
@@ -587,7 +587,7 @@ footer{
 }
 
 .modal {
-    z-index: 9999999999 !important;
+    z-index: 999999999 !important;
 }
 
 .material-tooltip {
